--- a/main.css
+++ b/main.css
@@ -3,10 +3,13 @@
   --skylight: #0D3C7D;
   --yellowdark: #FFE072;
   --yellowlight: #FFF2AE;
+  --yellowgold: #EBCF87;
 
-  --fontwhite: #D4D4D4;
+  --fontwhite: #d4d4d4;
 
-  --fontbutton: 20px;
+  --fonttitle: 60px;
+  --fonttext: 20px;
+  --fontsmall: 18px;
 }
 
 * {
@@ -23,13 +26,14 @@ body {
 /*----------------------------------
   Font
 -----------------------------------*/
-h1, h2, h3, a, li {
+h1, h2, h3, p, a, li, input, button, .error {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 20px;
   color: var(--fontwhite);
   -webkit-font-smoothing: antialiased;
   letter-spacing: 0.45px;
+  line-height: 1.75rem;
   text-decoration: none;
   hyphens: auto;
   -webkit-hyphens: auto; 
@@ -37,7 +41,14 @@ h1, h2, h3, a, li {
 }
 
 h1 {
-  line-height: 1.75rem;
+  color: var(--yellowgold);
+  font-size: var(--fonttitle);
+  font-weight: 300;
+}
+
+strong {
+  display: block;
+  font-weight: 600;
 }
 
 
@@ -52,6 +63,7 @@ h1 {
 
 nav {
   position: fixed;
+  z-index: 10;
   width: 100%;
   top: 0;
 }
@@ -64,7 +76,9 @@ nav {
 
 .logo {
   display: inline-block;
-  font-size: var(--fontbutton);
+  font-size: var(--fonttext);
+  color: var(--fontwhite);
+  font-weight: 400;
   margin: 0;
   padding-left: 10px;
   vertical-align: super;
@@ -88,27 +102,134 @@ nav {
   display: inline-block;
 }
 
-nav ul {
-  display: inline-block;
+.navbar {
   position: absolute;
-  right: 0px;
+  top: 0;
+  right: 0;
+}
+
+.nav-list {
   margin: 30px;
 }
 
-nav li {
+.nav-list li {
   display: inline-block;
-  padding: 10px 15px;
+  margin-left: 7px;
   border: 2px solid var(--fontwhite);
   border-radius: 50px;
-  opacity: 0.5;
+  opacity: 0.4;
+  transition: opacity 0.5s ease-in-out;
 }
+
+.nav-list li a {
+  padding: 10px 20px;
+  display: inherit;
+}
+
+
+.nav-list li:hover {
+  opacity: 1;
+}
+
+.burger-icon {
+  display: none;
+  cursor: pointer;
+  margin: 30px;
+}
+.bar {
+  width: 25px;
+  height: 2px;
+  background-color: white;
+  margin: 3px 0;
+  transition: width 0.3s ease;
+}
+
+.burger-icon.active .bar:nth-child(odd) {
+  width: 0px; ;
+}
+
+
+.angebotnav {
+  position: fixed;
+  z-index: 9;
+  top: 0;
+  height: 100vh;
+  width: 80%;
+  left: 10%;
+  display: none;
+}
+
+.angebotsun {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#angebotBtn {
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+#angebotBtn.activBtn {
+  opacity: 1;
+  border: 2px solid var(--yellowgold);
+  color: var(--yellowgold);
+}
+
+.angebot a { 
+  position: absolute;
+  color: var(--yellowgold);
+}
+.angebot a::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: -15px;
+  width: 5px;
+  height: 5px;
+  background: var(--yellowgold);
+  border-radius: 10px;
+  transition: 1s;
+}
+
+.angebot a:hover::before {
+  width: 10px;
+  height: 10px;
+}
+
+.angebot a:nth-child(1) { top: 15%; left: 40%; }
+.angebot a:nth-child(2) { top: 45%; left: 5%; }
+.angebot a:nth-child(3) { top: 45%; right: 5%; }
+.angebot a:nth-child(4) { top: 80%; left: 15%; }
+.angebot a:nth-child(5) { top: 80%; right: 15%; }
+
+/*----------------------------------
+  Basic
+-----------------------------------*/
+.maincontent {
+  margin: 0 auto;
+  max-width: 900px;
+  position: relative;
+  z-index: 2;
+  opacity: 1;
+  transition: opacity 1s;
+}
+
+.maincontent.fade {
+  opacity: 0;
+}
+
+.subpage {
+  margin-top: 40vh;
+}
+
 
 /*----------------------------------
   Intro
 -----------------------------------*/
 
 .intro {
-  width: 100%;
   display: flex;
   height: 100vh;
   align-items: center;
@@ -119,6 +240,8 @@ nav li {
 .intro h1 {
   margin-left: 50%;
   padding-right: 50px;
+  font-size: var(--fonttext);
+  font-weight: 400;
 }
 
 .sun {
@@ -148,17 +271,203 @@ nav li {
   width: 300px;
 }
 
-.svgcircle {
-  fill: none;
-  stroke: url(#svgid);
-  stroke-width: 1;
+.line {
+  border-left: solid 2px var(--yellowgold);
+  padding-left: 15px;
 }
 
-.line {
-  border-left: solid 2px cornsilk;
-  padding-left: 15px;
-  width: 50%;
+.gold {
+  color: var(--yellowgold);
 }
+
+.center {
+  margin-top: 75px;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+/*----------------------------------
+  Astro Circle
+-----------------------------------*/
+
+.astrocirclecontainer {
+  overflow: hidden;
+  position: relative;
+  margin: 50px auto;
+  max-width: 800px;
+}
+
+.astrocircle {
+position: absolute;
+top: 0;
+left: 0;
+}
+
+.acin {position: relative;}
+.acout {animation: acout 60s linear infinite;}
+.acfast {animation: acfast 30s linear infinite;}
+.acmiddle {animation: acmiddle 90s linear infinite;}
+.acslow {animation: acslow 120s linear infinite;}
+
+@keyframes acout {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(-360deg); }
+}
+@keyframes acfast {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+@keyframes acmiddle {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+@keyframes acslow {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/*----------------------------------
+  Unterseiten Horoskope
+-----------------------------------*/
+.descriptioncont {
+  display: flex;
+  margin-top: 75px;
+}
+
+.dprice {
+  width: 35%;
+}
+
+.dwhat {
+  width: 65%;
+}
+
+.bookingcont {
+  margin-top: 75px;
+  padding: 15px 30px 40px;
+  border: 2px solid var(--yellowgold);
+  border-radius: 15px;
+}
+
+
+/*----------------------------------
+    Contactform
+-----------------------------------*/
+
+form {
+  margin: 30px 0 0 ;
+}
+
+fieldset {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+input, button {
+  width: 100%;
+  box-shadow: none;
+  border: none;
+  border-bottom: 2px solid var(--yellowgold);
+  background-color: transparent;
+  margin-bottom: 5px;
+  padding: 18px 10px 15px;
+}
+
+label {
+  margin: 15px 0 ;
+  padding: 0px;
+}
+
+input:hover {
+    transition: border-color 0.3s ease-in-out;
+}
+
+button {
+  cursor: pointer;
+  background-color: var(--yellowgold);
+  border-radius: 50px;
+  padding: 15px 25px;
+  color: var(--skydark);
+  width: 100%;
+  margin-top: 40px;
+  border: none;
+  transition: background-color 0.3s ease-in-out;
+
+}
+button:hover {
+  background-color: var(--yellowlight);
+}
+
+input:focus {
+  outline:none;
+  background-color:  rgba(4, 31, 65, 0.5);
+}
+
+::-webkit-input-placeholder {color: rgba(212, 212, 212, 0.6);}
+:-moz-placeholder {color: rgba(212, 212, 212, 0.6);}
+::-moz-placeholder {color: rgba(212, 212, 212, 0.6);}
+:-ms-input-placeholder {color: rgba(212, 212, 212, 0.6);}
+
+.error {
+  color: var(--yellowgold);
+  font-size: 15px;
+  line-height: 1;
+  padding-left: 15px
+}
+
+.success {
+  color: var(--funkgreen);
+  text-align: left;
+  padding: 10px;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--funkgreen);
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
+  z-index: 9999;
+}
+
+.popup h1, .popup p {
+  color: white;
+}
+
+#closePopup {
+  background-color: white ;
+  color: var(--funkgreen);
+  width: 100%;
+  margin-top: 25px;
+  text-align: center;
+}
+
+.homebutton {
+  position: absolute;
+  background-color: transparent;
+  left: 5%;
+  bottom: 50px;
+  margin: 15px;
+  display: inline-block;
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 10px 20px;
+  z-index: 2;
+}
+.homebutton a {
+  text-decoration: none;
+  color: white;
+}
+
+
+
+
+
 
 /*----------------------------------
   Stars
@@ -166,6 +475,7 @@ nav li {
 
 .starry-sky {
   position: fixed;
+  z-index: 1;
   top: 0;
   left: 0;
   width: 100%;
@@ -200,6 +510,30 @@ nav li {
   Footer
 -----------------------------------*/
 
+.angebotnavfooter {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+footer {
+  display: flex;
+  z-index: 2;
+  position: relative;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 60px;
+  margin: 30px;
+  padding-top: 20px;
+  border-top: 1px solid var(--yellowgold);
+}
+
+footer a {
+  display: block;
+  color: var(--yellowgold);
+  font-size: var(--fontsmall);
+}
 
 /*----------------------------------
     Cookiebanner
@@ -273,8 +607,24 @@ nav li {
   
 }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
   
+  /* nav */
+  .burger-icon {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .nav-list li {
+    display: block;
+    margin-bottom: 10px;
+    position: relative;
+    right: -200px;
+    transition: right 1s ease;
+  }
+  .nav-list.active li {right: 0px;}
+  .nav-list.active li:nth-child(2) {transition-delay: 0.25s;}
+  .nav-list.active li:nth-child(3) {transition-delay: 0.5s;}
 
   #cookiebanner {width: calc(100% - 40px); left: 20px;}
   #cookiebanner.visible {bottom: 30px;}
