animation und Resp nav

--- a/main.css
+++ b/main.css
@@ -77,10 +77,13 @@ nav {
   z-index: 10;
   width: 100%;
   top: 0;
+  transition: top 0.5s ease-in-out;
+  background-color: #041f41bf;
 }
 
 .logocontainer{
-  margin: 30px;
+  z-index: 1;
+  margin: 30px 30px 20px;
   position: relative;
   display: inline-block;
 }
@@ -142,10 +145,14 @@ nav {
   opacity: 1;
 }
 
+li.nav-resp {
+  display: none;
+}
+
 .burger-icon {
   display: none;
   cursor: pointer;
-  margin: 30px;
+  margin: 40px;
 }
 .bar {
   width: 25px;
@@ -165,8 +172,8 @@ nav {
   z-index: 9;
   top: 0;
   height: 100vh;
-  width: 80%;
-  left: 10%;
+  width: 90%;
+  left: 5%;
   display: none;
 }
 
@@ -220,14 +227,16 @@ nav {
 -----------------------------------*/
 .maincontent {
   margin: 0 auto;
-  max-width: 900px;
+  max-width: 1000px;
+  padding: 0 30px;
   position: relative;
   z-index: 2;
   opacity: 1;
   transition: opacity 1s;
 }
 
-.maincontent.fade {
+.maincontent.fade,
+footer.fade {
   opacity: 0;
 }
 
@@ -250,13 +259,14 @@ nav {
 
 .intro h1 {
   margin-left: 50%;
-  margin-top: 100px;
-  padding-right: 50px;
+  margin-top: 70px;
+  margin-bottom: 50px;
   font-size: var(--fonttext);
   font-weight: 400;
 }
 
 .sun {
+  margin-top: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -314,28 +324,93 @@ top: 0;
 left: 0;
 }
 
+.signcircle {
+  width: 100%;
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.circle {
+  width: 30%;
+  position: absolute;
+}
+
+.rotating-image {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  left: 50%;
+  margin-left: -12px;
+  margin-top: -12px;
+  transform: rotate(20deg);
+}
+
 .acin {position: relative;}
-.acout {animation: acout 60s linear infinite;}
-.acfast {animation: acfast 30s linear infinite;}
-.acmiddle {animation: acmiddle 90s linear infinite;}
-.acslow {animation: acslow 120s linear infinite;}
+.acout {animation: acout 120s linear infinite;}
+.speedsun {animation: circleanimation 90s infinite linear;}
+
+.rotationmercury {transform: rotate(-30deg);}
+.mercury {transform: rotate(30deg);}
+.speedmercury {animation: circleanimation 90s infinite linear;}
+
+.rotationvenus {transform: rotate(20deg);}
+.venus {transform: rotate(-20deg);}
+.speedvenus {animation: circleanimation 90s infinite linear;}
+
+.rotationrahu {transform: rotate(160deg);}
+.rahu {transform: rotate(-160deg);}
+.speedrahu {animation: circleanimation 120s infinite linear;}
+
+.rotationsaturn {transform: rotate(-110deg);}
+.saturn {transform: rotate(110deg);}
+.speedsaturn {animation: circleanimation 120s infinite linear;}
+
+.rotationmars {transform: rotate(-80deg);}
+.mars {transform: rotate(80deg);}
+.speedmars {animation: circleanimation 120s infinite linear;}
+
+.rotationketu {transform: rotate(-70deg);}
+.ketu {transform: rotate(70deg);}
+.speedketu {animation: circleanimation 120s infinite linear;}
+
+.rotationchiron {transform: rotate(-55deg);}
+.chiron {transform: rotate(55deg);}
+.speedchiron {animation: circleanimation 120s infinite linear;}
+
+.rotationjupiter {transform: rotate(-35deg);}
+.jupiter {transform: rotate(35deg);}
+.speedjupiter {animation: circleanimation 120s infinite linear;}
+
+.rotationneptun {transform: rotate(120deg);}
+.neptun {transform: rotate(-120deg);}
+.speedneptun {animation: circleanimation 360s infinite linear;}
+
+.rotationpluto {transform: rotate(-140deg);}
+.pluto {transform: rotate(140deg);}
+.speedpluto {animation: circleanimation 480s infinite linear;}
+
+.rotationuranus {transform: rotate(-130deg);}
+.uranus {transform: rotate(130deg);}
+.speeduranus {animation: circleanimation 240s infinite linear;}
+
+.rotationmoon {transform: rotate(180deg);}
+.moon {transform: rotate(-180deg);}
+.speedmoon {animation: circleanimation 30s infinite linear;}
+
+
+@keyframes circleanimation {
+  0% {transform: rotate(0deg) translateX(-100%) rotate(0deg);}
+  100% {transform: rotate(360deg) translateX(-100%) rotate(-360deg);}
+}
 
 @keyframes acout {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(-360deg); }
-}
-@keyframes acfast {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-@keyframes acmiddle {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-@keyframes acslow {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
+} 
 
 /*----------------------------------
   Subpage Horoskope
@@ -584,7 +659,8 @@ footer {
   flex-direction: row;
   gap: 40px;
   margin: 50px auto 30px;
-  max-width: 900px;
+  padding: 0 30px;
+  max-width: 1000px;
 }
 
 footer a {
@@ -679,25 +755,51 @@ footer a {
   
 }
 
-@media (max-width: 768px) {
-  
+@media (max-width: 870px) {
+  /* root */
+  :root {
+    --fonttitle: 60px;
+    --fontsubtitle: 30px;
+    --fontsubsubtitle: 25px;
+    --fonttext: 18px;
+    --fontsmall: 18px;
+  }
+
   /* nav */
   .burger-icon {
     display: flex;
+    position: relative;
+    z-index: 1;
     flex-direction: column;
     align-items: flex-end;
   }
+
+  .nav-list {
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: none;
+    padding: 20%;
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    background-color: var(--skydark);
+  }
+  #angebotBtn {display: none;}
+  .nav-resp {display: block;}
+
   .nav-list li {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     position: relative;
-    right: -200px;
-    transition: right 1s ease;
+    opacity: 0.75;
   }
-  .nav-list.active li {right: 0px;}
-  .nav-list.active li:nth-child(2) {transition-delay: 0.25s;}
-  .nav-list.active li:nth-child(3) {transition-delay: 0.5s;}
 
+  /* footer */
+  footer {
+    flex-direction: column;
+    gap: 20px;
+  }
   #cookiebanner {width: calc(100% - 40px); left: 20px;}
   #cookiebanner.visible {bottom: 30px;}
 }
