--- a/main.css
+++ b/main.css
@@ -24,6 +24,11 @@ body {
   background: var(--skydark);
   background: linear-gradient(0deg, var(--skylight) 20%, var(--skydark) 100%);
 }
+body.fixed {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 
 /*----------------------------------
   Font
@@ -754,6 +759,9 @@ footer a {
   :root {
     --fonttext: 18px;
   }
+  input {
+    margin-bottom: 0;
+  }
 
   /* nav */
   .burger-icon {
@@ -764,17 +772,23 @@ footer a {
     align-items: flex-end;
   }
 
-  .nav-list {
+  .nav-list-cont{
     position: fixed;
     left: 0;
     top: 0;
-    display: none;
-    padding: 20%;
     width: 100%;
+    display: none;
+  }
+  .nav-list {
+    display: flex;
+    padding: 120px 20%;
     height: 100vh;
     margin: 0;
     background-color: var(--skydark);
+    flex-direction: column;
+    justify-content: center;
   }
+
   #angebotBtn {display: none;}
   .nav-resp {display: block;}
 
@@ -783,6 +797,9 @@ footer a {
     margin-bottom: 15px;
     position: relative;
     opacity: 0.75;
+  }
+  .nav-list li a {
+    padding: 5px 15px;
   }
 
   /* stars */
@@ -798,8 +815,35 @@ footer a {
     0%, 100% { opacity: 0; }
     50% { opacity: 0.25; }
   }
+  /* subpage */
+  .description {flex-direction: column;}
+  .dprice, .dwhat {width: 100%;}
+  .booking {padding: 5px 20px 20px;}
+  .astromap {margin: 50px 0px 0}
+  .preiscontainer {gap: 20px; margin: 80px 0 100px;}
+  .preislayer {flex-basis: 100%;}
 
   /* footer */
+  .angebotnavfooter {
+    flex-direction: column-reverse;
+    height: auto;
+    margin: 80px 0;
+  }
+  .angebot a {
+    position: relative;
+    display: block;
+    margin-bottom: 10px;
+    top: auto !important;
+    left: auto !important;
+    right: auto !important;
+  }
+
+  .angebot a::before {
+    top: 10px;
+  }
+
+  
+
   footer {
     flex-direction: column;
     gap: 20px;
@@ -810,11 +854,11 @@ footer a {
 
 @media (max-width: 720px) {
   /* start */
+  .intro {margin-top: 80px;}
  .intro h1 {margin: 70px 50px 0;}
 
 
 }
-
 
 
 @media (max-width: 450px) {
@@ -824,6 +868,10 @@ footer a {
   height: 14px;
   margin-left: -7px;
   margin-top: -7px;
+  }
+
+  .outercirclesun {
+    width: 270px;
   }
   
 }
