--- a/main.css
+++ b/main.css
@@ -574,9 +574,9 @@ input:focus {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 500px;
+  width: 340px;
   transform: translate(-50%, -50%);
-  background-color: var(--yellowgold);
+  background-color: var(--yellowlight);
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
@@ -700,14 +700,14 @@ footer a {
   left: 40px;
   border-radius: 5px;
   width: 350px;
-  background-color: white;
+  background-color:var(--yellowlight);
   padding: 15px;
   z-index: 9999;
   transition: bottom 0.5s cubic-bezier(0.2, 0.8, 0.3, 2);
 }
 
 #cookiebanner p {
-  color: var(--funkblue);
+  color: var(--skydark);
   margin: 0;
 }
 
@@ -716,9 +716,9 @@ footer a {
 }
 
 #cookiebanner button {
-  
   letter-spacing: 0;
-  text-decoration: none; 
+  text-decoration: none;
+  width: calc(50% - 5px); 
 }
 
 #declineBtn, #acceptBtn {
@@ -728,16 +728,16 @@ footer a {
 
 #declineBtn {
   padding: 10px 20px;
-  background:none;
-  border: 1px solid var(--funkblue); 
-  color: var(--funkblue);
+  border: 1px solid var(--skydark); 
+  color: var(--skydark);
+  background: none;
   opacity: 0.5;
 }
 
 #acceptBtn {
   border: none;
   padding: 10px 40px;
-  background: var(--funkblue);
+  background: var(--skydark);
   color: white;
   margin-right: 5px;
 }
@@ -796,7 +796,6 @@ footer a {
     display: block;
     margin-bottom: 15px;
     position: relative;
-    border: 1px solid var(--fontwhite);
     opacity: 0.75;
   }
   .nav-list li a {
@@ -823,6 +822,7 @@ footer a {
   .astromap {margin: 50px 0px 0}
   .preiscontainer {gap: 20px; margin: 80px 0 100px;}
   .preislayer {flex-basis: 100%;}
+  .payBtncont {flex-direction: column;}
 
   /* footer */
   .angebotnavfooter {
@@ -835,7 +835,6 @@ footer a {
     display: block;
     margin-bottom: 10px;
     top: auto !important;
-    left: auto !important;
     right: auto !important;
   }
 
@@ -862,10 +861,10 @@ footer a {
 @media (max-width: 450px) {
   /* start */
  .rotating-image {
-  width: 14px;
-  height: 14px;
-  margin-left: -7px;
-  margin-top: -7px;
+  width: 16px;
+  height: 16px;
+  margin-left: -8px;
+  margin-top: -8px;
   }
 
   .outercirclesun {
