--- a/main.css
+++ b/main.css
@@ -817,7 +817,7 @@ footer a {
   .booking {padding: 5px 20px 20px;}
   .astromap {margin: 50px 0px 0}
   .preiscontainer {gap: 20px; margin: 80px 0 100px;}
-  .preislayer {flex-basis: 100%;}
+  .preislayer {flex-basis: 100%; padding: 25px 20px 25px;}
   .payBtncont {flex-direction: column;}
 
   /* footer */
